src/asynch_interface.h

//Callback signatures

/// 
///
/// \param id The link id.
/// \param t The current time.
/// \param y The current state vector at time *t* for the link.
/// \param num_dof: Number of degree of freedom.
/// \return Returns the data to be written as output.
typedef int (OutputIntCallback)(unsigned int id, double t, double *y, unsigned int num_dof);
typedef void (PeakflowOutputCallback)(unsigned int ID, double peak_time, double *peak_value, double *params, double *global_params, double conversion, unsigned int area_idx, void* user, char* buffer);
/// This routine deallocates the memory occupied by an AsynchSolver object created with a call to Asynch_Init.
///
/// \param asynch  A pointer to a AsynchSolver object to free.
/// \see Asynch_Init
void Asynch_Free(AsynchSolver* asynch);
//Routines to intialize network and model

/// This routine opens and processes a global file. It reads all specified database connection files,
/// but does not process any other input file. An error in this routine is considered fatal, and results
/// in a call to the routine *MPI_Abort* on the communicator used to create asynch.
///
/// \pre asynch should be initialized with Asynch_Init before calling Asynch_Parse_GBL.
/// \param asynch A pointer to a AsynchSolver object to use.
/// \param filename  Path of a global file.
void Asynch_Parse_GBL(AsynchSolver* asynch, char* filename);
/// This routine processes topology inputs for the AsynchSolver object as set in the global file read
/// by Asynch_Parse_GBL. This initializes each Link object and sets their parent and child information.
/// Generally, this is the first initialization routine to call after parsing a global.
///
/// \pre Asynch_Parse_GBL should be called before Asynch_Load_Network.
/// \param asynch A pointer to a AsynchSolver object to use.
void Asynch_Load_Network(AsynchSolver* asynch);
/// This routine assigns the Links of the *asynchsolver* object to the MPI processes.
///
/// \pre This routine must be called after *Asynch_Load_Network*.
/// \param asynch A pointer to a AsynchSolver object to use.
void Asynch_Partition_Network(AsynchSolver* asynch);
/// This routine processes parameter inputs for the AsynchSolver object as set in the global file read by
/// *Asynch_Parse_GBL*. Setting *load_all* to true causes every MPI process to store the parameters at every Link.
/// 
/// \pre This routine can be called before *Asynch_Partition_Network* only if *load_all* is set to true.
/// \param asynch A pointer to a AsynchSolver object to use.
void Asynch_Load_Network_Parameters(AsynchSolver* asynch);
/// This routine processes the is_dam inputs for the AsynchSolver object as set in the global file read by
// *Asynch_Parse_GBL*.
/// 
/// \pre This routine should be called after *Asynch_Partition_Network* and *Asynch_Load_Network_Parameters* have been called.
/// \param asynch A pointer to a AsynchSolver object to use.
void Asynch_Load_Dams(AsynchSolver* asynch);
/// This routine processes numerical solver inputs for the AsynchSolver object as set in the global file read by *Asynch_Parse_GBL*.
/// 
/// \pre This routine should be called after *Asynch_Partition_Network* has been called.
/// \param asynch A pointer to a AsynchSolver object to use.
void Asynch_Load_Numerical_Error_Data(AsynchSolver* asynch);
/// This routine sets the model specific routines for each link for the AsynchSolver object as set in the global file read by *Asynch_Parse_GBL*.
///
/// \pre This routine should be called after *Asynch_Partition_Network* and *Asynch_Load_Network_Parameters* have been called.
/// \param asynch A pointer to a AsynchSolver object to use.
void Asynch_Initialize_Model(AsynchSolver* asynch);
/// This routine processes the initial condition inputs for the AsynchSolver object as set in the global file read by *Asynch_Parse_GBL*.
///
/// \pre This routine should be called after *Asynch_Partition_Network* and *Asynch_Initialize_Model* have been called.
/// \param asynch A pointer to a AsynchSolver object to use.
void Asynch_Load_Initial_Conditions(AsynchSolver* asynch);
/// This routine processes the forcing inputs for the AsynchSolver object as set in the global file read by *Asynch_Parse_GBL*.
///
/// \pre This routine should be called after *Asynch_Partition_Parameters* has been called.
/// \param asynch A pointer to a AsynchSolver object to use.
void Asynch_Load_Forcings(AsynchSolver* asynch);
/// This routine processes save list inputs for the AsynchSolver object as set in the global file read by *Asynch_Parse_GBL*.
///
/// \pre This routine should be called after *Asynch_Partition_Network* has been called.
/// \param asynch A pointer to a AsynchSolver object to use.
void Asynch_Load_Save_Lists(AsynchSolver* asynch);
/// This routine checks that all inputs are loaded for the AsynchSolver object. Some small final initializations are also performed.
///
/// \pre This routine should be called as the last initialization routine.
/// \param asynch A pointer to a AsynchSolver object to use.
void Asynch_Finalize_Network(AsynchSolver* asynch);
// Integration related routines

/// This routine processes calculates appropriate step sizes for the integrators at each link in the AsynchSolver object.
///
/// \pre This routine must be called before a call to *Asynch_Advance*, and after all initializations are performed.
/// \param asynch A pointer to a AsynchSolver object to use.
void Asynch_Calculate_Step_Sizes(AsynchSolver* asynch);
/// This routine advances the numerical solver up to the time set in *maxtime*. See Section [sec: model type and maxtime].
/// Calculations to solve the model differential and algebraic equations are performed, using forcing data as needed.
///
/// \pre This routine should be called after *Asynch_Partition_Network* has been called.
/// \param asynch A pointer to a AsynchSolver object to use.
/// \param print_level  If 0, no time series information is produced. Otherwise, time series information is produced.
void Asynch_Advance(AsynchSolver* asynch, int print_level);
//Forcing related routines

/// This routine activates a forcing for use.This means when a call to the routine *Asynch_Advance* is made,
/// the forcing with index *idx* will be applied for calculations.By default, all forcings set in a global file
/// are initially active.This routine has the opposite effect of *Asynch_Deactivate_Forcing*.
///
/// \param asynch A pointer to a AsynchSolver object to use.
/// \param idx The index of the forcing to activate.
/// \return  Returns 0 if the forcing was activated, 1 if an error occurred
int Asynch_Activate_Forcing(AsynchSolver* asynch, unsigned int idx);
/// This routine deactivates a forcing for use. This means when a call to the routine *Asynch_Advance* is made,
/// all values for the forcing with index *idx* will be taken as 0. By default, all forcings set in a global file
/// are initially active. This routine has the opposite effect of *Asynch_Activate_Forcing*.
///
/// \param asynch A pointer to a AsynchSolver object to use.
/// \param idx The index of the forcing to activate.
/// \return  Returns 0 if the forcing was activated, 1 if an error occurred
int Asynch_Deactivate_Forcing(AsynchSolver* asynch, unsigned int idx);
//Data file routines

/// This routine prepares the output sources for time series data. Preparation includes creating files or database tables.
///
/// \pre This routine must be called before any time series data can be produced.
/// \param asynch A pointer to a AsynchSolver object to use.
void Asynch_Prepare_Output(AsynchSolver* asynch);
/// This routine prepares the output sources for the peakflow data. Preparation includes creating files or database tables.
///
/// \pre This routine must be called before any peakflow data can be produced.
/// \param asynch A pointer to a AsynchSolver object to use.
void Asynch_Prepare_Peakflow_Output(AsynchSolver* asynch);
void Asynch_Copy_Local_OutputUser_Data(AsynchSolver* asynch, unsigned int location, void* source, unsigned int size);
void Asynch_Set_Size_Local_OutputUser_Data(AsynchSolver* asynch, unsigned int location, unsigned int size);
// Temp files routines

/// This routine prepares the temporary files for time series data. Preparation includes creating files or database tables.
///
/// \pre This routine must be called before any time series data can be calculated. A call to *Asynch_Advance* with the
/// *print_flag* set before preparing temporary files will create an error.
/// \param asynch A pointer to a AsynchSolver object to use.
void Asynch_Prepare_Temp_Files(AsynchSolver* asynch);
/// This routine sets a new database for an input or output. If information for a database has already been set,
/// it is released, and the new connection information is set.
/// Database information includes hostname, username, password, etc. This is the same information that is available
/// in the header of database connection files (see Section [sec: database connection files]).
/// Several database connections exist for every AsynchSolver object. *conn_idx* can take the values:
///  - ASYNCH_DB_LOC_TOPO
///  - ASYNCH_DB_LOC_PARAMS
///  - ASYNCH_DB_LOC_INIT
///  - ASYNCH_DB_LOC_RSV
///  - ASYNCH_DB_LOC_HYDROSAVE
///  - ASYNCH_DB_LOC_PEAKSAVE
///  - ASYNCH_DB_LOC_HYDRO_OUTPUT
///  - ASYNCH_DB_LOC_PEAK_OUTPUT
///  - ASYNCH_DB_LOC_SNAPSHOT_OUTPUT
///  - ASYNCH_DB_LOC_FORCING_START
///
/// The last value for *conn_idx* is the database connection for the first forcing specified in the global file.
/// Database connections for other forcings can be access sequentially. For example, to access the forcing with index 2 
/// (the third forcing in a global file), set *conn_idx* as `ASYNCH_DB_LOC_FORCING_START + 2`
///
/// \param asynch A pointer to a AsynchSolver object to use.
/// \param conn_string A connection string
/// \param conn_idx Connection index
void Asynch_Set_Database_Connection(AsynchSolver* asynch, const char* conn_string, unsigned int conn_idx);
// State variable

/// This routine sets a file for reading initial value data. The *init_flag* is set based upon the extension of *filename*.
/// The initial data is **NOT** read while executing this routine. A call to *Asynch_Load_System* is needed to set the filename.
/// This routine cannot be used to set the format to a database connection.
///
/// \param asynch A pointer to a AsynchSolver object to use.
/// \param filename Filename to use for initial value data.
void Asynch_Set_Init_File(AsynchSolver* asynch, char* filename);
/// This routine clears all peakflow data for each link. The time to peak is set to the current local
/// time of *asynch*, and the value of the peakflow is set to the current state vector of the link.
///
/// \param asynch A pointer to a AsynchSolver object to use.
void Asynch_Reset_Peakflow_Data(AsynchSolver* asynch);
unsigned int Asynch_Get_Local_LinkID(AsynchSolver* asynch, unsigned int location);
unsigned int Asynch_Get_Init_Timestamp(AsynchSolver* asynch);
///This routine returns the number of parameters for the differential equations that are available to
///every link. This number is either specified in a global file, or with a call to the routine
///*Asynch_Set_Global_Parameters*.
/// 
/// \param asynch A pointer to a AsynchSolver object to use.
/// \return The number of global parameters, typically specified in a global file.
unsigned int Asynch_Get_Size_Global_Parameters(AsynchSolver* asynch);