py/asynch_interface_py.h

void C_inc_ref(PyObject* obj);
unsigned int* Allocate_CUINT_Array(unsigned int n);
void Free_PythonInterface(AsynchSolver* asynch);
AsynchSolver* Asynch_Init_py(int numprocs,int* ranks);
void Asynch_Set_System_State_py(AsynchSolver* asynch,double t_0,double* values);
int Asynch_Custom_Model_py(AsynchSolver* asynch, AsynchModel* model, PyObject* lib);
void SetParamSizes_py(GlobalVars* GlobalVars,void* user);
void InitRoutines_py(Link* link,unsigned int type,unsigned int exp_imp,unsigned short int dam,void* user);
void Asynch_Copy_Local_OutputUser_Data_py(AsynchSolver* asynch,unsigned int location,PyObject* source,unsigned int size);